force-app/main/default/objects/leaseworks__Portal_Asset_Staging__c/leaseworks__Portal_Asset_Staging__c.object-meta.xml
<CustomObject>
    <description>Staging object for Portal Asset</description>
    <label>Portal Asset Staging</label>
    <nameField>
        <label>Portal Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Asset Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>