force-app/main/default/objects/leaseworks__Portal_Asset_Staging__c/fields/leaseworks__Incoming_Data__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Incoming_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incoming Data</label>
    <referenceTo>leaseworks__Incoming_Data__c</referenceTo>
    <relationshipLabel>Portal Asset Staging</relationshipLabel>
    <relationshipName>Portal_Asset_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>