force-app/main/default/objects/leaseworks__Portal_Asset_Staging__c/fields/leaseworks__Portal_Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Portal_Asset_Template__c</fullName>
    <label>Asset Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>