force-app/main/default/objects/leaseworks__Portal_Asset_Staging__c/fields/leaseworks__Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remaining_Hours__c</fullName>
    <label>Remaining Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>