force-app/main/default/objects/leaseworks__Portal_Asset_Staging__c/fields/leaseworks__Vintage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Vintage__c</fullName>
    <label>Vintage</label>
    <type>Date</type>
</CustomField>